@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  FIX: TitleProxy hogging 100% CPU when unable to connect to server.
   CHG: Bumped GStreamer requirement to 0.8.1.
   ADD: amaroK finally remembers if it was hidden on exit.
   ADD: OSDPreview now has snap to regions.
